# sibi-learning

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  models.py  schemas.py  security.py  seed.py
backend/app/routers/: auth.py  lessons.py  progress.py
backend/tests/: conftest.py  test_api.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Card.tsx  Layout.tsx  ProtectedRoute.tsx  ThemeToggle.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/ml/: features.ts  mediapipe.ts  recognizer.ts  references.ts
frontend/src/pages/: HomePage.tsx  LessonDetailPage.tsx  LessonsPage.tsx  LoginPage.tsx  PracticePage.tsx  RegisterPage.tsx
frontend/src/state/: auth.ts  theme.ts
ml/: README.md  download_dataset.py  export_to_tfjs.py  extract_landmarks.py  requirements.txt  train_cnn_letters.py  train_lstm_words.py
