[project]
name = "sibi-backend"
version = "0.1.0"
description = "FastAPI backend for the SIBI sign-language learning website"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "pydantic[email]>=2.9.2",
    "pydantic-settings>=2.6.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
    "bcrypt==4.0.1",
    "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "httpx>=0.27.2",
    "ruff>=0.7.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
# B008 - FastAPI's Depends() is idiomatically used in default arguments.
# UP017 - Keep `datetime.timezone.utc` for 3.10 compatibility too.
ignore = ["E501", "B008", "UP017"]
